--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     },
     "require": {
-       "php": "^7.4|^8.0",
-     "tatiye/terminal": "dev-master"
-    }
+        "php": "^7.4|^8.0",
+        "tatiye/terminal": "dev-main"
+    },
 }
