--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,16 @@
             "email": "info@tatiye.net"
         }
     ],
+   "assets":[ 
+         "lib/prism/prism.css",
+         "lib/jquery.json-viewer.js",
+         "lib/js-cookie/js.cookie.js",
+         "lib/prism/prism.js",
+         "lib/prism/clipboard.code.js",
+         "lib/prism/clipboard.min.js",
+         "lib/shortcuts.js",
+         "terminal/bundle.min.js"
+      ],
     "autoload": {
         "psr-4": {"terminal\\": "src/"}
     },
